--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "test.unit": "vitest",
     "lint": "eslint",
     "format": "prettier --write \"src/\"",
-    "i18n": "lingui extract && lingui compile --typescript"
+    "i18n": "lingui extract && lingui compile --typescript",
+    "electron": "ionic cap build electron"
   },
   "dependencies": {
+    "@capacitor-community/electron": "^5.0.1",
     "@capacitor/android": "7.0.1",
     "@capacitor/app": "7.0.0",
     "@capacitor/core": "7.0.1",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "7.0.1",
+    "@ionic/cli": "^7.2.0",
     "@lingui/babel-plugin-lingui-macro": "^5.2.0",
     "@lingui/cli": "^5.2.0",
     "@lingui/vite-plugin": "^5.2.0",
