--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
     "@lingui/react": "^5.2.0",
+    "@types/node": "^22.13.9",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "ionicons": "^7.0.0",
