change app name

--- a/electron/package.json
+++ b/electron/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "writerApp",
+  "name": "kiwimeriApp",
   "version": "1.0.0",
   "description": "An Amazing Capacitor App",
   "author": {
