--- a/android/.gitignore
+++ b/android/.gitignore
@@ -5,6 +5,7 @@
 *.aar
 *.ap_
 *.aab
+release/
 
 # Files for the ART/Dalvik VM
 *.dex
@@ -54,8 +55,8 @@ captures/
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
-#*.jks
-#*.keystore
+*.jks
+*.keystore
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
