--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,8 @@ buildscript {
 }
 
 apply from: "variables.gradle"
+apply from: "version.gradle"
+apply from: "app.gradle"
 
 allprojects {
     repositories {
