--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@capacitor/status-bar": "7.0.0",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
+    "@lexical/react": "^0.27.2",
     "@lingui/react": "^5.2.0",
     "@types/node": "^22.13.9",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "ionicons": "^7.0.0",
+    "lexical": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
