--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test.unit": "vitest",
     "lint": "eslint",
     "format": "prettier --write \"src/\"",
-    "i18n": "lingui extract && lingui compile --typescript",
+    "i18n": "lingui extract --clean && lingui compile --typescript",
     "electron": "ionic cap build electron"
   },
   "dependencies": {
