--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "packageManager": "yarn@1.22.22",
   "scripts": {
     "dev": "ionic serve",
     "build": "tsc && vite build",
@@ -36,7 +37,8 @@
     "react-dom": "^18.3.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
-    "tinybase": "^5.3.0"
+    "tinybase": "^5.3.0",
+    "@repo/kiwimeri-sync-core": "*"
   },
   "devDependencies": {
     "@capacitor/cli": "7.0.1",
@@ -61,9 +63,13 @@
     "prettier": "^3.5.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "terser": "^5.4.0",
+    "turbo": "^2.4.4",
     "typescript": "^5.1.6",
     "vite": "~5.2.0",
     "vitest": "^0.34.6"
   },
   "description": "An Ionic project"
+  "workspaces": [
+    "packages/*"
+  ]
 }
