--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "kiwimeri-app",
+  "description": "A Pleasant Writing App",
   "private": true,
   "version": "0.0.1",
   "type": "module",
   "packageManager": "yarn@1.22.22",
   "scripts": {
-    "dev": "ionic serve",
+    "dev": "concurrently \"node middleware.cjs\" \"ionic serve\"",
+    "start-middleware": "node middleware.cjs",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test.e2e": "cypress run",
@@ -28,6 +30,8 @@
     "@ionic/react-router": "^8.0.0",
     "@lexical/react": "^0.27.2",
     "@lingui/react": "^5.2.0",
+    "@repo/kiwimeri-sync-core": "*",
+    "@repo/kiwimeri-sync-webdav": "*",
     "@types/node": "^22.13.9",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
@@ -37,8 +41,7 @@
     "react-dom": "^18.3.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
-    "tinybase": "^5.3.0",
-    "@repo/kiwimeri-sync-core": "*"
+    "tinybase": "^5.3.0"
   },
   "devDependencies": {
     "@capacitor/cli": "7.0.1",
@@ -56,6 +59,8 @@
     "@typescript-eslint/parser": "^8.24.1",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
+    "concurrently": "^9.1.2",
+    "cors-anywhere": "^0.4.4",
     "cypress": "^13.5.0",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
@@ -68,7 +73,6 @@
     "vite": "~5.2.0",
     "vitest": "^0.34.6"
   },
-  "description": "An Ionic project"
   "workspaces": [
     "packages/*"
   ]
