--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,10 +11,15 @@ COPY index.html /app/
 COPY *.json /app/
 COPY *.config.ts /app/
 COPY *.config.js /app/
+COPY .env.prod /app/.env
 
-RUN ls && ionic build --prod
+RUN ionic build --prod
 
-FROM nginx:alpine
+FROM nginx:stable-alpine3.20-perl
+COPY ./docker/env.sh /docker-entrypoint.d/env.sh
 COPY ./docker/nginx.conf /etc/nginx/templates/default.conf.template
 RUN rm -rf /usr/share/nginx/html/*
 COPY --from=build /app/dist/ /usr/share/nginx/html/
+
+RUN chmod +x /docker-entrypoint.d/env.sh
+CMD ["nginx", "-g", "daemon off;"]
