--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,6 +1,12 @@
+# disable logging
+access_log off;
+error_log /dev/null;
+
 server {
     listen       80;
     listen [::]:80;
+        
+    resolver 8.8.8.8;
 
     location / {
         root   /usr/share/nginx/html;
@@ -12,5 +18,18 @@ server {
         add_header Cache-Control no-cache;
         expires 0;
         try_files /index.html =404;
+    }
+    location /api {
+        set $remote 0;
+        if ($uri ~ "^/api/http:/(.*)$") {
+            set $remote http://$1$is_args$args;
+        }
+        if ($uri ~ "^/api/https:/(.*)$") {
+            set $remote https://$1$is_args$args;
+        }
+        proxy_set_header Origin "";
+        proxy_set_header Referer "";
+        proxy_set_header Host "";
+        proxy_pass $remote;
     }
 }
