--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "jsdom": "^22.1.0",
     "prettier": "^3.5.2",
     "prettier-plugin-organize-imports": "^4.1.0",
+    "sass": "^1.86.3",
     "terser": "^5.4.0",
     "typescript": "^5.1.6",
     "vite": "~5.2.0",
