.env.prod -> .env.production (vite compliant)

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # VITE_DEV_OVERRIDE_PLATFORM=android
 VITE_DEV_ENABLE_SPACE_INSPECTOR=false
 VITE_DEV_ENABLE_STORE_INSPECTOR=false
-VITE_HTTP_PROXY=http://localhost:8080
+VITE_INTERNAL_HTTP_PROXY=http://localhost:8080
