--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
       dockerfile: docker/Dockerfile
       context: .
     environment:
-      - VITE_HTTP_PROXY=http://localhost:8110/api
+      - VITE_INTERNAL_HTTP_PROXY=http://localhost:8110/api
     ports:
       - 8110:80
