--- a/electron/package.json
+++ b/electron/package.json
@@ -17,7 +17,7 @@
     "electron:start-live": "node ./live-runner.js",
     "electron:start": "yarn electron --inspect=5858 ./",
     "electron:pack": "yarn build && electron-builder build --dir -c ./electron-builder.config.json",
-    "electron:make": "yarn build && electron-builder build -c ./electron-builder.config.json -p always"
+    "electron:make": "yarn build && electron-builder build -c ./electron-builder.config.json"
   },
   "dependencies": {
     "@capacitor-community/electron": "^5.0.0",
