--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "format": "prettier --write \"src/\"",
     "i18n": "lingui extract --clean && lingui compile --typescript",
     "release:docker": "node scripts/release-docker.cjs",
-    "release:electron": "node --env-file=.env.local scripts/release-electron.cjs"
+    "release:electron": "node --env-file=.env.local scripts/release-electron.cjs",
+    "release:android": "node --env-file=.env.local scripts/release-android.cjs",
+    "release": "yarn release:docker && yarn release:electron && yarn release:android"
   },
   "dependencies": {
     "@capacitor-community/electron": "^5.0.1",
