--- a/electron/package.json
+++ b/electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kiwimeri-app",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A Pleasant Note App",
   "author": {
     "name": "",
@@ -22,12 +22,12 @@
   "dependencies": {
     "@capacitor-community/electron": "^5.0.0",
     "chokidar": "~3.5.3",
+    "electron-fetch": "^1.9.1",
     "electron-is-dev": "~2.0.0",
     "electron-serve": "~1.1.0",
     "electron-unhandled": "~4.0.1",
     "electron-updater": "^5.3.0",
-    "electron-window-state": "^5.0.3",
-    "electron-fetch": "^1.9.1"
+    "electron-window-state": "^5.0.3"
   },
   "devDependencies": {
     "electron": "^26.2.2",
