--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start-middleware": "node middleware.cjs",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test.e2e": "cypress run",
     "test.unit": "vitest",
+    "test.unit.dev": "vitest --ui",
     "lint": "eslint",
     "format": "prettier --write \"src/\"",
     "i18n": "lingui extract --clean && lingui compile --typescript",
@@ -60,9 +60,9 @@
     "@typescript-eslint/parser": "^8.24.1",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
+    "@vitest/ui": "^3.1.1",
     "concurrently": "^9.1.2",
     "cors-anywhere": "^0.4.4",
-    "cypress": "^13.5.0",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^22.1.0",
