handle conflicts on conflicting updates

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start-middleware": "node middleware.cjs",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test.unit": "vitest",
-    "test.unit.dev": "vitest --ui",
+    "test": "vitest",
+    "test-dev": "vitest --ui",
     "lint": "eslint",
     "format": "prettier --write \"src/\"",
     "i18n": "lingui extract --clean && lingui compile --typescript",
