--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "start-middleware": "node middleware.cjs",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest",
-    "test-dev": "vitest --ui",
+    "test": "vitest unit",
+    "test-dev": "vitest --ui unit",
+    "test-e2e": "vitest --ui e2e",
     "lint": "eslint",
     "format": "prettier --write \"src/\"",
     "i18n": "lingui extract --clean && lingui compile --typescript",
