add log level support in polyfill

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # VITE_DEV_OVERRIDE_PLATFORM=android
+VITE_LOG_LEVEL=debug
 VITE_DEV_ENABLE_SPACE_INSPECTOR=false
 VITE_DEV_ENABLE_STORE_INSPECTOR=false
 VITE_INTERNAL_HTTP_PROXY=http://localhost:8080
