--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start-middleware": "node middleware.cjs",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest unit",
-    "test-dev": "vitest --ui unit",
+    "test": "vitest",
+    "test-unit": "vitest unit",
     "test-e2e": "vitest e2e",
     "lint": "eslint",
     "format": "prettier --write \"src/\"",
