--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.2",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"node scripts/middleware.cjs\" \"ionic serve\"",
+    "dev": "concurrently \"node scripts/middleware.cjs\" \"lingui extract --watch\" \"ionic serve\"",
     "start-middleware": "node scripts/middleware.cjs",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -14,6 +14,7 @@
     "test-e2e": "vitest e2e",
     "lint": "eslint",
     "format": "prettier --write \"src/\"",
+    "i18n-watch": "lingui extract --watch",
     "i18n": "lingui extract --clean && lingui compile --typescript",
     "set-version": "node scripts/set-version.cjs",
     "release:docker": "node scripts/release-docker.cjs",
