fix github action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,4 +34,6 @@ jobs:
         run: |
           yarn install --frozen-lockfile
       - name: Unit Tests
-        run: yarn test-unit
+        run: |
+          cp .env.ci .env
+          yarn test-unit
