--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^22.13.9",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "fflate": "^0.8.2",
     "ionicons": "^7.0.0",
     "lexical": "^0.27.2",
     "react": "^18.3.0",
