--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-dom": "^18.3.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
-    "tinybase": "^5.3.0"
+    "tinybase": "^5.3.0",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@capacitor/cli": "7.0.1",
