invert release order

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "release:docker": "node scripts/release-docker.cjs",
     "release:electron": "node --env-file=.env.local scripts/release-electron.cjs",
     "release:android": "node --env-file=.env.local scripts/release-android.cjs",
-    "release": "yarn release:docker && yarn release:electron && yarn release:android"
+    "release": "yarn release:electron && yarn release:android && yarn release:docker"
   },
   "dependencies": {
     "@capacitor-community/electron": "^5.0.1",
