--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "i18n": "lingui extract --clean && lingui compile --typescript",
     "set-version": "node scripts/set-version.cjs",
     "release:docker": "node scripts/release-docker.cjs",
-    "release:electron": "node --env-file=.env.local scripts/release-electron.cjs",
-    "release:android": "node --env-file=.env.local scripts/release-android.cjs",
+    "release:electron": "scripts/release-electron.sh",
+    "release:android": "scripts/release-android.sh",
     "release": "yarn release:electron && yarn release:android && yarn release:docker"
   },
   "dependencies": {
