--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "i18n-watch": "lingui extract --watch",
     "i18n": "lingui extract --clean && lingui compile --typescript",
     "set-version": "node scripts/set-version.cjs",
-    "release:docker": "node scripts/release-docker.cjs",
     "release:electron": "scripts/release-electron.sh",
     "release:android": "scripts/release-android.sh",
-    "release": "yarn release:electron && yarn release:android && yarn release:docker"
+    "release": "yarn release:electron && yarn release:android"
   },
   "dependencies": {
     "@capacitor-community/electron": "^5.0.1",
