fix incorrect update for last remote change

--- a/nginx.dev.proxy.conf
+++ b/nginx.dev.proxy.conf
@@ -6,6 +6,7 @@ server {
 
     location / {
         add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Headers' '*';
         set $remote 0;
         if ($uri ~ "^/http:/(.*)$") {
             set $remote http://$1$is_args$args;
