--- a/compose/nginx.proxy.conf
+++ b/compose/nginx.proxy.conf
@@ -8,6 +8,10 @@ server {
         
     resolver 8.8.8.8;
 
+    sendfile on;
+    client_max_body_size 20M;
+    client_body_buffer_size 20M;
+
     location / {
         add_header 'Access-Control-Allow-Origin' 'http://localhost:8110';
         set $remote 0;
