--- a/nginx.dev.proxy.conf
+++ b/nginx.dev.proxy.conf
@@ -4,6 +4,10 @@ server {
         
     resolver 8.8.8.8;
 
+    sendfile on;
+    client_max_body_size 20M;
+    client_body_buffer_size 20M;
+
     location / {
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Headers' '*';
