--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/network": "^7.0.2",
     "@capacitor/status-bar": "7.0.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
     "@lexical/react": "^0.27.2",
